--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Travel Agency</title>
+    <title>Acriletras 3D</title>
     <meta property="og:title" content="Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -42,7 +42,7 @@
       <div class="landing-page-container">
         <div class="landing-page-top-container">
           <nav data-role="Header" class="landing-page-navbar">
-            <h1>Travel</h1>
+            <h1>Acriletras 3D</h1>
             <div class="landing-page-right-side">
               <div class="landing-page-links-container">
                 <span class="landing-page-text">Home</span>
